tests/ui/lexer/unterminated_hex_string.sol
hex"
//~^ ERROR unterminated hex string
//~| ERROR expected global item
